client/src/app/globals.css
/* ... */
.menu-button-active {
  background: var(--gradient-radial-light-2);
}

.menu-button:focus {
  border-radius: 0.25rem;
  border: 2px solid var(--color-neutral-400, #857d78);
  background: var(--gradient-radial-light-2);
}

.menu-button:disabled {
  opacity: 0.4;
}

.menu-solo-button {
  display: inline-flex;
  height: 2.5rem;
  padding: 0.75rem 1.5rem;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  flex-shrink: 0;
  font-family: var(--font-archivo), sans-serif;
  cursor: pointer;
  color: var(--color-neutral-200);
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-image: linear-gradient(
      142deg,
      var(--color-silver-gradient-from) 0%,
      var(--color-silver-gradient-to) 100%
    )
    1;
  background: url("/assets/ui/backgrounds/background-1.jpg") lightgray 50% /
    cover no-repeat;
}

.menu-solo-button:hover,
.menu-solo-button:active {
  background: var(--gradient-radial-light-2);
}

.leaderboard-table {
  color: var(--color-neutral-100);
}

.global-text-button {
  display: inline-flex;
  height: 2.5rem;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: var(--font-archivo), sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  line-height: 135%;
  gap: 0.5rem;
  flex-shrink: 0;
  cursor: pointer;
  border-radius: 0.25rem;
  border: 1px solid var(--color-neutral-500, #655d59);
  box-shadow: 0px 24px 7px 0px rgba(0, 0, 0, 0),
    0px 15px 6px 0px rgba(0, 0, 0, 0.01), 0px 9px 5px 0px rgba(0, 0, 0, 0.05),
    0px 4px 4px 0px rgba(0, 0, 0, 0.09), 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
}

.global-text-button:hover {
  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15) inset,
    2px 0px 8px 0px rgba(0, 0, 0, 0.4) inset,
    0px 2px 4px 0px rgba(0, 0, 0, 0.25) inset,
    2px 4px 12px 0px rgba(0, 0, 0, 0.1) inset;
}

.global-text-button:active {
  box-shadow: 0px 24px 7px 0px rgba(0, 0, 0, 0),
    0px 15px 6px 0px rgba(0, 0, 0, 0.01), 0px 9px 5px 0px rgba(0, 0, 0, 0.05),
    0px 4px 4px 0px rgba(0, 0, 0, 0.09), 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
}

.global-text-button:focus {
  box-shadow: 0px 24px 7px 0px rgba(0, 0, 0, 0),
    0px 15px 6px 0px rgba(0, 0, 0, 0.01), 0px 9px 5px 0px rgba(0, 0, 0, 0.05),
    0px 4px 4px 0px rgba(0, 0, 0, 0.09), 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
}

.global-text-button:disabled {
  border-radius: 0.25rem;
  border: 1px solid var(--color-neutral-500, #655d59);
  opacity: 0.3;
  box-shadow: 0px 24px 7px 0px rgba(0, 0, 0, 0),
    0px 15px 6px 0px rgba(0, 0, 0, 0.01), 0px 9px 5px 0px rgba(0, 0, 0, 0.05),
    0px 4px 4px 0px rgba(0, 0, 0, 0.09), 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
}

.global-text-button-span {
  display: flex;
  padding: 0rem 1rem;
  justify-content: center;
  align-items: center;
  flex: 1 0 0;
  align-self: stretch;
  border-radius: 0.25rem;
  background: var(--color-neutral-700, #24211f);
  box-shadow: 0px 4px 8px 0px rgba(238, 220, 209, 0.15) inset,
    -2px 0px 4px 0px rgba(0, 0, 0, 0.4) inset,
    2px 0px 4px 0px rgba(0, 0, 0, 0.4) inset,
    0px -2px 4px 0px rgba(0, 0, 0, 0.4) inset,
    0px 2px 4px 0px rgba(0, 0, 0, 0.25) inset,
    2px 4px 12px 0px rgba(209, 202, 198, 0.1) inset;
}

.global-text-button-span:hover {
  background: var(--color-neutral-700, #24211f);
  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15) inset,
    2px 0px 8px 0px rgba(0, 0, 0, 0.4) inset,
    0px 2px 4px 0px rgba(0, 0, 0, 0.25) inset,
    2px 4px 12px 0px rgba(0, 0, 0, 0.1) inset;
}

.global-text-button-span:active {
  background: var(--color-neutral-600, #413b38);
  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15) inset,
    2px 0px 8px 0px rgba(0, 0, 0, 0.4) inset,
    0px 2px 4px 0px rgba(0, 0, 0, 0.25) inset,
    2px 4px 12px 0px rgba(0, 0, 0, 0.1) inset;
}

.global-text-button-span:focus {
  background: var(--color-neutral-700, #24211f);
  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15) inset,
    2px 0px 8px 0px rgba(0, 0, 0, 0.4) inset,
    0px 2px 4px 0px rgba(0, 0, 0, 0.25) inset,
    2px 4px 12px 0px rgba(0, 0, 0, 0.1) inset;
}

.global-text-button-span:disabled {
  border-radius: 0.25rem;
  background: var(--color-neutral-700, #24211f);
  box-shadow: none;
}

.global-text-button.active {
  border: 1px solid var(--color-neutral-300);
}

.global-text-button.active .global-text-button-span {
  background: var(--color-neutral-600, #413b38);
  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15) inset,
    2px 0px 8px 0px rgba(0, 0, 0, 0.4) inset,
    0px 2px 4px 0px rgba(0, 0, 0, 0.25) inset,
    2px 4px 12px 0px rgba(0, 0, 0, 0.1) inset;
}

.level-bar {
  display: flex;
  flex-wrap: nowrap;
  width: 8.25rem;
  padding: 0.25rem 0.75rem;
  justify-content: center;
  align-items: center;
  gap: 0.25rem;
  border: 1px solid var(--color-silver-gradient-from);
  border-radius: 0.25rem;
  background: url("/assets/ui/backgrounds/background-1.jpg") lightgray 50% /
    cover no-repeat;
  position: absolute;
  bottom: -0.3rem;
  left: 50%;
  transform: translateX(-50%);
  z-index: 10;
}

.quit-game-score {
  display: flex;
  flex-wrap: nowrap;
  padding: 0.5rem 1rem;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--color-silver-gradient-from);
  border-radius: 0.25rem;
  background: url("/assets/ui/backgrounds/background-1.jpg") lightgray 50% /
    cover no-repeat;
}

.moves-history-box {
  display: flex;
  height: 3rem;
  max-height: 3rem;
  justify-content: center;
  align-items: flex-start;
  gap: 0.5rem;
  align-self: stretch;
}

.history-move {
  display: flex;
  width: 2.35938rem;
  height: 2.35938rem;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  flex-shrink: 0;
  aspect-ratio: 37.75/37.75;
  border-radius: 0.25rem;
  box-shadow: 0px 24px 7px 0px rgba(0, 0, 0, 0),
    0px 15px 6px 0px rgba(0, 0, 0, 0.01), 0px 9px 5px 0px rgba(0, 0, 0, 0.05),
    0px 4px 4px 0px rgba(0, 0, 0, 0.09), 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
}

.history-move.success {
  border: 1px solid var(--color-extra-green, #325012);
}
/* ... */

